<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mealmate.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_mealplan"
        android:name="com.example.mealmate.ui.mealplan.MealPlanFragment"
        android:label="@string/title_mealplan"
        tools:layout="@layout/fragment_mealplan" />

    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.example.mealmate.ui.fav.FavFragment"
        android:label="@string/title_fav"
        tools:layout="@layout/fragment_fav" />
    <fragment
        android:id="@+id/navigation_grocery"
        android:name="com.example.mealmate.ui.grocerylist.GroceryListFragment"
        android:label="@string/title_grocery"
        tools:layout="@layout/fragment_grocerylist" />
</navigation>