<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Close Button -->
    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close_icon" />

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="338dp"
        android:layout_height="210dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/food_img1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeButton" />

    <TextView
        android:id="@+id/recipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="San choy bau"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/recipeImage"
        app:layout_constraintTop_toBottomOf="@+id/recipeImage" />

    <TextView
        android:id="@+id/recipeDescription"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/recipe_description"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/recipeCategory"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recipeName"
        app:layout_constraintTop_toBottomOf="@+id/recipeName" />

    <TextView
        android:id="@+id/recipeIngredientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Ingredients"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recipeDescription"
        app:layout_constraintTop_toBottomOf="@+id/recipeDescription" />

    <TextView
        android:id="@+id/recipeIngredients"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/ingredients"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recipeIngredientTitle"
        app:layout_constraintTop_toBottomOf="@+id/recipeIngredientTitle" />

    <TextView
        android:id="@+id/recipeCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Breakfast"
        android:textColor="@android:color/holo_green_light"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/recipeName"
        app:layout_constraintEnd_toEndOf="@+id/recipeImage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/recipeName" />

    <TextView
        android:id="@+id/recipeInstructionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Instructions"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/recipeIngredients"
        app:layout_constraintStart_toStartOf="@+id/recipeIngredients"
        app:layout_constraintTop_toBottomOf="@+id/recipeIngredients" />

    <TextView
        android:id="@+id/recipeInstructions"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/instructions"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/recipeIngredients"
        app:layout_constraintStart_toStartOf="@+id/recipeIngredients"
        app:layout_constraintTop_toBottomOf="@+id/recipeInstructionTitle" />

    <LinearLayout
        android:id="@+id/timeSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeDescription"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/recipeImage"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/recipeInstructions"
        app:layout_constraintStart_toStartOf="@+id/recipeInstructions"
        app:layout_constraintTop_toBottomOf="@+id/recipeInstructions">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="Prep Time"
                android:src="@drawable/baseline_timer_24" />

            <TextView
                android:id="@+id/recipePrepTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="Prep - 20mins"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- spacing-->
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="Prep Time"
                android:src="@drawable/timegreen_icon" />

            <TextView
                android:id="@+id/recipeCookingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="Cook - 10mins"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- spacing-->
        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <!-- Servings -->
        <TextView
            android:id="@+id/recipeServings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Servings: 3"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/addToFavoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:drawableLeft="@drawable/baseline_favorite_border_24"
        android:text="Favourite"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recipeInstructions"
        app:layout_constraintTop_toBottomOf="@+id/timeSection" />

    <Button
        android:id="@+id/addMealPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:drawableLeft="@drawable/baseline_local_dining_24"
        android:text="Make MealPlan"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recipeInstructions"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/addToFavoritesButton"
        app:layout_constraintTop_toBottomOf="@+id/timeSection" />

</androidx.constraintlayout.widget.ConstraintLayout>
